--- a/react/src/CSS/homeHead.css
+++ b/react/src/CSS/homeHead.css
@@ -11,6 +11,7 @@
     text-align: left;
     padding-left: 10px;
     width: 25%;
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; }
 .download_click {
